@@ -2,6 +2,7 @@ v3.5.16:
 - Fixed: skin background for the custom DialogRecordSettings on unsupported skins
 - Fixed: DialogRecordSettings for skin.estuary
 - Fixed: DialogRecordSettings for skin.transparency
+- Fixed: TSReader RTSP playback
 
 v3.5.15:
 - Fixed: recording playback when the description contains text with a return
